k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adder-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adder-pod
  template:
    metadata:
      labels:
        app: adder-pod
    spec:
      containers:
        - name: adder-container
          image: k8straining_add:latest
          # image: us.gcr.io/fearless-sandbox-2019/k8straining_add:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: adder-service
spec:
  selector:
    app: adder-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  # type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiplier-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multiplier-pod
  template:
    metadata:
      labels:
        app: multiplier-pod
    spec:
      containers:
        - name: multiplier-container
          image: k8straining_multiply:latest
          # image: us.gcr.io/fearless-sandbox-2019/k8straining_multiply:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: multiplier-service
spec:
  selector:
    app: multiplier-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  # type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /add
        backend:
          serviceName: adder-service
          servicePort: 80
      - path: /multiply
        backend:
          serviceName: multiplier-service
          servicePort: 80
